--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -41,6 +41,7 @@
 	<li><h:link value="Current Date" outcome="displayDate.xhtml" /></li>
 	<li><h:link value="Manage Variable" outcome="variable.xhtml" /></li>
 	<li><h:link value="Name Validator" outcome="nameValidation.xhtml" /></li>
+	<li><h:link value="Data" outcome="data.xhtml" /></li>
 </ul>
 </body>
 </html>
